--- a/Altschool_Project/index.html
+++ b/Altschool_Project/index.html
@@ -16,6 +16,7 @@
                 <a href="/" _blank><strong>Home</strong></a>
                 <a href="./form.html" _blank><strong>Application Form</strong></a>
                 <a href="./courses.html" _blank><strong>Courses</strong></a>
+                <a href="./media.html" _blank><strong>Media</strong></a>
             </nav>
         </header>
 
@@ -162,8 +163,9 @@
         </main>
         <footer>
             <a href="/" _blank><strong>Home</strong></a>
-            <a href="./form.html" _blank><strong>Application Form</strong></a>
             <a href="./table.html" _blank><strong>Courses</strong></a>
+            <a href="./form.html" _blank><strong>Application Form</strong></a>
+            <a href="./media.html"><strong>Media</strong></a>
         </footer>
     </div>
 </body>
