--- a/Altschool_Project/media.html
+++ b/Altschool_Project/media.html
@@ -5,21 +5,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <article>
-        <h1>About me</h1>
+    <div class="container">
+
+    <header>
+        <nav>
+            <a href="/" _blank><strong>Home</strong></a>
+            <a href="./forms.html" _blank><strong>Application Form</strong></a>
+            <a href="./courses.html" _blank><strong>Courses</strong></a>
+            <a href="./media.html" _blank><strong>Media</strong></a>
+        </nav>
+    </header>
+<main>   
+    <h1 class="mb-20 mt-20">About me</h1>
         <p class="mb-20">Hey there! Let me take you on a journey to know a few things to know about me.</p>
         <section>
-            <div>
-                <img src="../Altschool_Project/Assets/bg.jpg" alt="image">
-                <img src="../Altschool_Project/Assets/07  DAYS.jpg" alt="image" width="20%" , height="auto">
+            <div class="media">
+                <img src="../Altschool_Project/Assets/jae003.jpg" alt="image">
+                <img src="../Altschool_Project/Assets/jaeoo1.jpg" alt="image" width="20%" , height="auto">
+                <img src="https://web.facebook.com/photo.php?fbid=318097884192020&set=pb.100079754327937.-2207520000&type=3" alt="image" width="20%" , height="auto">
             </div>
         </section>
-        
-    </article>
+        <p class="mb-20">My name is John Faun Tyosange, a student of Altschool Africa. I am an ardent lover of music. I play the guitar, drums and the piano but my favourite is the guitar because of the dynamysm that comes with strumming and plucking strings to produce harmonious melodies.</p>
 
+        <section>
+            <div class="media">
+                <audio src="../Altschool_Project/Assets/Stargazing__Moonlight_Version_(256k).mp3"
+                    controls>Stargazing__Moonlight_Version_</audio></br>
+            </div>
+            <div class="back-to-top-btn">
+                <button type="button" class="">download</button>
+            </div>
+        </section>
+        <p class="mb-20">Stargazing by Myles ... is one of my favourite songs and it stands out for me not just because of its amazing musical combination but also for the amazing lyrics composed into such a beautiful peice.</p>
+
+        <p>Passion is what drives me to do all that i do as a person, be it singing, or serving my community or programming. i am driven to be the best version of me not just for what i can get but for what i desire the world at large to become. Here's a video to stir your passion for purpose.</p>
+        <div>
+            <video src="https://www.youtube.com/watch?v=wnHW6o8WMas">No Excuses</video>
+        </div>
+        <div class="back-to-top-btn">
+            <button><a href="#top">Back to the Top</a></button>
+        </main>
+        </div>
+    <footer>
+        <a href="/" _blank><strong>Home</strong></a>
+        <a href="./table.html" _blank><strong>Courses</strong></a>
+        <a href="./form.html" _blank><strong>Application Form</strong></a>
+        <a href="./media.html"><strong>Media</strong></a>
+    </footer>
+    </div>
 </body>
-
 </html>
